[package]
name = "eras"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.1.1" }
soroban-token-sdk = { version = "21.1.1" }

[dev-dependencies]
soroban-sdk = { version = "21.1.1", features = ["testutils"] }
ed25519-dalek = "2.1.1"
rand = "0.8.5"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true